# spotify-dl

./: .gitignore  README.md  _gen_screenshots.py  analyzer.py  crate.py  downloader.py  install.sh  language.py  main.py  monitor.py  pyproject.toml  rekordbox.py  requirements.txt  scanner.py  search.py  spotify_client.py  tagger.py  watcher.py  youtube.py
cli/: main.py
core/: auth.py  config.py  dupes.py  language.py  recognizer.py  search.py  setcheck.py  spotify_client.py  tagger.py  trending.py  watcher.py  youtube.py
server/: app.py
tauri-app/: index.html  package-lock.json  package.json  vite.config.ts
tauri-app/src/: App.tsx  index.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: main.rs
tauri-app/src/api/: client.ts
tauri-app/src/components/: AccountBadge.tsx  PlaylistPickerModal.tsx
tauri-app/src/pages/: DJToolsPage.tsx  DownloadPage.tsx  LibraryPage.tsx  TrendingPage.tsx  WatcherPage.tsx
