[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spotidl"
version = "1.1.0"
description = "Download Spotify music as MP3s via YouTube — with a DJ toolkit and native GUI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "spotipy>=2.23.0",
    "yt-dlp>=2024.1.0",
    "mutagen>=1.47.0",
    "rich>=13.7.0",
    "pyfiglet>=1.0.2",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "prompt_toolkit>=3.0.0",
    "shazamio>=0.6.0",
    "sounddevice>=0.4.6",
    "scipy>=1.11.0",
    "langdetect>=1.0.9",
    "psutil>=5.9.0",
    "librosa>=0.10.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
dj        = "cli.main:main"
dj-server = "server.app:start"

[tool.setuptools.packages.find]
where   = ["."]
include = ["core*", "cli*", "server*"]
