[package]
name    = "spotidl-app"
version = "1.1.0"
edition = "2021"

[lib]
name = "spotidl_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"    # size-optimised binary
panic     = "abort"
